--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,16 @@
-<div class="container">
-  <h1 class="mt-3 mb-3">ISS Data</h1>
-  <app-iss-component></app-iss-component>
+<!-- The sidebar -->
+<div class="sidebar">
+  <a  routerLink="/iss" routerLinkActive="active">Iss now!</a>
+  <a  routerLink="/iss">People in Space!</a>
+  <a href="#contact">Contact</a>
+  <a href="#about">About</a>
+</div>
+
+<!-- Page content -->
+<div class="content">
+  <div class="container">
+    <h1 class="mt-3 mb-3">ISS Data</h1>
+    <router-outlet></router-outlet>
+    <!--<app-iss-component></app-iss-component>-->
+  </div>
 </div>
