People in space

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!-- The sidebar -->
 <div class="sidebar">
   <a  routerLink="/iss" routerLinkActive="active">Iss now!</a>
-  <a  routerLink="/iss">People in Space!</a>
+  <a  routerLink="/people" routerLinkActive="active">People in Space!</a>
   <a href="#contact">Contact</a>
   <a href="#about">About</a>
 </div>
